Requirement Section Done

--- a/index.html
+++ b/index.html
@@ -123,15 +123,29 @@
         </div>
     </section>
     <!-- Footer Section -->
-    <footer>
+    <footer class="footer-section">
         <div class="footer-logo">
             <img src="images/foot-logo.png" alt="">
         </div>
         <div class="icons">
+            <a href="https://instagram.com">
+                <i class="fab fa-instagram"></i>
+            </a>
 
+            <a href="https://dribble.com">
+                <i class="fab fa-dribbble"></i>
+            </a>
+
+            <a href="https://twitter.com">
+                <i class="fab fa-twitter"></i>
+            </a>
+
+            <a href="https://youtube.com">
+                <i class="fab fa-youtube"></i>
+            </a>
         </div>
         <div class="copyright">
-
+            <p>Copyright &copy; 2022 Football</p>
         </div>
     </footer>
 </body>
