before media query

--- a/index.html
+++ b/index.html
@@ -122,6 +122,41 @@
             <img src="images/match.png" alt="">
         </div>
     </section>
+    <!-- Statics Section -->
+    <section class="statics">
+        <h1>Copa America Statics</h1>
+        <div class="statics-all-col">
+            <div class="statics-col">
+                <h3>10</h3>
+                <h5>Total Country</h5>
+            </div>
+            <div class="statics-col">
+                <h3>Aregentina</h3>
+                <h5>Winner</h5>
+            </div>
+            <div class="statics-col">
+                <h3>Brasil</h3>
+                <h5>Runner Up</h5>
+            </div>
+        </div>
+    </section>
+    <!-- iframe section -->
+    <div class="iframe-section">
+        <h2>Keep In Touch</h2>
+        <div class="frame-data">
+            <div class="data-1">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d115860.91172955948!2d89.30016555076658!3d24.841520864198245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fc54e7e81df441%3A0x27133ed921fe73f4!2sBogura!5e0!3m2!1sen!2sbd!4v1626204993145!5m2!1sen!2sbd"
+                    width="560" height="322" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div class="data-2">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/sDFr2Yzd-8s"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
     <!-- Footer Section -->
     <footer class="footer-section">
         <div class="footer-logo">
